--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <h1>Ajax Example project</h1>
 <p id="para"> This is an example project for ajax</p>
 <button id="ajax-button">Send a Ajax Request</button>
+<img id="dynamic-img">
 
 <script src="js/jquery-3.7.1.min.js"></script>
 <script>
@@ -15,7 +16,7 @@
         /*console.log("Button is Worked");*/
         var http=new XMLHttpRequest();
         console.log(http.readyState, "After the XMLHttpRequest Object  Created");
-        http.open('GET', 'db/db.txt');
+        http.open('GET', 'images/464475.jpg');
         console.log(http.readyState, "After the OPEN Method invoked");
         console.log(http.responseText);
         console.log(http.readyState, "After the Response Text Printed");
@@ -30,10 +31,31 @@
             console.log(http.readyState, "Inside On Ready State Change Event");
             console.log(http.responseText);
             console.log(http.status);
+
+            if (http.status==200 && http.readyState==4){
+                /*$('#para').text(http.responseText);*/     //wrap karagatta paragraph eke id eka,.text(http.responseText) deela set kala
+                //set image
+                $('#dynamic-img').attr('src', 'images/464475.jpg').show();
+            }
         }
 
         console.log("Request Finished !");
     });
+</script>
+
+<script>
+    // Synchronous request
+    console.log("start");
+    console.log("middle");
+    console.log("end");
+
+    // Asynchronous request
+    console.log("start");
+    setTimeout(()=>{
+        console.log("middle");
+    }, 2000);
+    console.log("end");
+
 </script>
 </body>
 </html>
