--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     $('#ajax-button').click(function () {
         console.log("Request Started");
         var http = new XMLHttpRequest();
-        http.open('GET', 'db/db.txt');
+        http.open('GET', 'db/db.txt', false);
         http.send();
         http.onreadystatechange = function () {
             if (http.status == 200 && http.readyState == 4) {
