Solve Ajax Request Error

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     $('#ajax-button').click(function () {
         console.log("Started");
         $.ajax({
-            url: 'db/d.txt',
+            url: 'db/db.txt',
             success: function (response) {
                 $('#para').text(response);
             },
