--- a/index.html
+++ b/index.html
@@ -10,6 +10,19 @@
 <button id="ajax-button">Send a Ajax Request</button>
 <img id="dynamic-img">
 
+<table class="table table-striped">
+    <thead>
+        <tr>
+            <th>Post ID</th>
+            <th>ID</th>
+            <th>Name</th>
+            <th>Email</th>
+            <th>Body</th>
+        </tr>
+    </thead>
+    <tbody id="tbl"></tbody>
+</table>
+
 <script src="js/jquery-3.7.1.min.js"></script>
 <!--
 <script>
@@ -75,7 +88,7 @@
     });
 </script>-->
 
-<script>
+<!--<script>
     $('#ajax-button').click(function () {
         console.log("Started");
         $.ajax({
@@ -92,9 +105,70 @@
         });
         console.log("Ended");
     });
+
+    // set details into the table /////////////////////////
+
+
+
+
+
+</script>-->
+
+<script>
+    $('#ajax-button').click(() => {
+        console.log('started');
+        $.ajax({
+            url: 'https://jsonplaceholder.typicode.com/comments',
+            // url: 'https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js',
+            method: "GET",
+            success: (response) => {
+
+                $('#tbl').empty();
+
+
+                response.forEach((item) => {
+                    const row = `
+                    <tr>
+                        <td>${item.postId}</td>
+                        <td>${item.id}</td>
+                        <td>${item.name}</td>
+                        <td>${item.email}</td>
+                        <td>${item.body}</td>
+                    </tr>
+                `;
+                    $('#tbl').append(row);
+                });
+
+                console.log(response);
+            },
+            error: (error) => {
+                console.log(error);
+            }
+        });
+        console.log('ended');
+    });
+
 </script>
 
+<!--<script>
+    $('#ajax-button').click(function () {
+        console.log("Started");
+        $.ajax({
+            url: 'https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js',
+            method: 'GET',
+            async: false, //synchronous request, but it is not recommended, because it will block the UI
+            success: function (response) {
+                $('#para').text(response);
+                console.log(response);
+            },
+            error: function (error) {
+                console.log(error);
+            }
+        });
+        console.log("Ended");
+    });
 
+</script>-->
 
 </body>
 </html>
