Set details into the table

--- a/index.html
+++ b/index.html
@@ -106,14 +106,9 @@
         console.log("Ended");
     });
 
-    // set details into the table /////////////////////////
-
-
-
-
-
 </script>-->
 
+<!--///////////////////// set details into the table /////////////////////////-->
 <script>
     $('#ajax-button').click(() => {
         console.log('started');
